--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <li class="active">Customer Info</li>
     <li>Vehicle Info</li>
     <li>Contact Info</li>
-    <li>Confirm</li>
+    <li>Choose Contract</li>
     <li>Finished</li>
   </ul>
 
@@ -211,9 +211,55 @@
 
   <!-- Cultivation2 FIELD SET --> 
   <fieldset>
-    <h2 class="fs-title">Contract confirmation</h2>
-
-    <input type="button" style="width: 100% !important;" data-page="4" name="next" class="next action-button" value="Order now" />
+    <h2 class="fs-title">Choose Contract</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col plan-container">
+          <img class="plan-icon" src="./img/pickup.png">
+          <h2 class="plan-header">
+              Basic Set
+          </h2>
+          <p class="plan-price">
+            14,99€
+          </p>
+          <p class="plan-feature">
+            <i class="fa fa-check plan-check" aria-hidden="true"></i> KIT
+          </p>
+          <p class="plan-feature">
+            <i class="fa fa-check plan-check" aria-hidden="true"></i> App
+          </p>
+          <p class="plan-feature">
+            <i class="fa fa-check plan-check" aria-hidden="true"></i> Tax Decleration
+          </p>
+          <p class="plan-feature" style="visibility: hidden;">
+            <i class="fa fa-check plan-check" aria-hidden="true"></i> Driving Analysis
+          </p>
+          <input type="button" style="width: 100% !important;" data-page="4" name="next" class="next action-button" value="Order now" />
+        </div>
+        <div class="col plan-container">
+          <img class="plan-icon" src="./img/race-car.png">
+          <h2 class="plan-header">
+              Advanced Set
+          </h2>
+          <p class="plan-price">
+            19,99€
+          </p>
+          <p class="plan-feature">
+            <i class="fa fa-check plan-check" aria-hidden="true"></i> KIT
+          </p>
+          <p class="plan-feature">
+            <i class="fa fa-check plan-check" aria-hidden="true"></i> App
+          </p>
+          <p class="plan-feature">
+            <i class="fa fa-check plan-check" aria-hidden="true"></i> Tax Decleration
+          </p>
+          <p class="plan-feature">
+            <i class="fa fa-check plan-check" aria-hidden="true"></i> Driving Analysis
+          </p>
+          <input type="button" style="width: 100% !important;" data-page="4" name="next" class="next action-button" value="Order now" />
+        </div>
+      </div>
+    </div>
   </fieldset>
 
 
